2017-April-26 Struan Robertson

		* ZhuNakamuraCrossing.cpp: Further refactoring of Zhu-Nakamura method.

		* Windows VC10: VC10 project files removed.

		* Minor baseline updates.

2017-April-17 Struan Robertson

		* ZhuNakamuraCrossing.cpp: Name change and further refactoring of Zhu-Nakamura method.

2017-April-17 Struan Robertson

		* IrreversibleExchangeReaction.cpp/.h, MicroRate.cpp: Irreversible exchange reaction 
		high pressure rate coefficients altered to use canonical partition functions. Results
		are also now printed.

2017-April-13 Chris Morley
		
		* ZhuNakamuraCrossingCoeff.cpp, ZNTest.xml: Changed me:ReducedMass to me:reducedMass for
		consistency.
		
		* mesmerPlugins.xsd: Add schema for ZhuNakamuraCrossingCoeff.
		
		* librarymols.xml: Remove use of HfAT0. Make more schema friendly.

2017-April-10 Struan Robertson

		* ZhuNakamuraCrossingCoeff.cpp, AdiabaticCurve.h: Refactoring of the Zhu-Nakamura 
		surface crossing implementation.

2017-April-04 Struan Robertson

		* FourierGrid1D.cpp: Analytical expressions used for 1D Fourier grid Hamiltonian 
		elements.

2017-April-01 Struan Robertson

		* SensitivityAnalysis.cpp: Fix for sensitivity analysis parallel execution.

2017-March-27 Struan Robertson

		* BuildParallel.sh, MakefileParallel: Initial revision of Linux parallel build tools.

2017-March-27 Struan Robertson

		* ZhuNakamuraCrossingCoeff.cpp, AdiabaticCurve.h: Initial revision of Zhu-Nakamura 
		surface crossing implementation.

2017-March-26 Struan Robertson

		* CollisionOperator.cpp: Fix bug related the number of time points for population 
		densities are calculated.

2017-March-26 Struan Robertson

		* FourierGrid1D.cpp, Potential1D.h/.cpp: Addition of new classes to represent a 
		general 1D potential from which QM states are calculated.

2017-March-14 Struan Robertson

		* ConditionsManger.cpp/.h, System.cpp: Corrected independent error check (again).

		* Documentation update.

2017-March-12 Struan Robertson
